refactor: dao code refactor